tests/rosetta/out/Dart/active-directory-connect.error
run error: exit status 254
../../tests/rosetta/out/Dart/active-directory-connect.dart:29:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/active-directory-connect.dart:19:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/active-directory-connect.dart:22:35: Error: The operator '[]' isn't defined for the class 'LDAPClient'.
 - 'LDAPClient' is from '../../tests/rosetta/out/Dart/active-directory-connect.dart'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
    print('Connected to ' + client['Host']);
                                  ^
../../tests/rosetta/out/Dart/active-directory-connect.dart:30:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/active-directory-connect.dart:54:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/active-directory-connect.dart:83:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/active-directory-connect.dart:88:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/active-directory-connect.dart:92:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
